Mon Jun 19 11:49:43 2000  David L. Levine  <levine@cs.wustl.edu>

        * include/makeinclude/platform_lynxos.GNU: export environment
          variables that are set on the host (for cross-compilation).
          The cross-compile g++ needs ENV_PREFIX in order to link
          properly.

        * ace/config-lynxos.h: added ACE_LACKS_PTHREAD_SIGMASK with
          LynxOS 3.1.0.  In addition to not be declared in the system
          headers, pthread_sigmask () isn't in the threads libs.

Mon Jun 19 10:43:27 2000  David L. Levine  <levine@cs.wustl.edu>

        * include/makeinclude/platform_lynxos.GNU: use -mthreads
          with LynxOS 3.1.0, as well as with prior versions.

Mon Jun 19 02:47:12 2000  Nanbor Wang  <nanbor@cs.wustl.edu>

        * ace/CORBA_macros.h: Fixed misspellings of deprecated.  Thanks to
          Ossama for pointing this out.

Sun Jun 18 11:39:48 2000  David L. Levine  <levine@cs.wustl.edu>

        * include/makeinclude/platform_lynxos.GNU: rework environment
          variables to better support LynxOS 3.1.0.

Sun Jun 18 10:54:59 2000  Douglas C. Schmidt  <schmidt@tango.cs.wustl.edu>

        * ace/INET_Addr: Added operator < to ACE_INET_Addr so that it
          can be used in an STL map.  Thanks to Tomer Amiaz
          <Tomer@bandwiz.com> for this suggestion.

Sun Jun 18 03:18:21 2000  Nanbor Wang  <nanbor@cs.wustl.edu>

        * ace/CORBA_macros.h: The definition of ACE_RETHORW is flawed
          because it requires all ACE_RETHROW statements be the last
          statement executed within the ACE_CATCH block as this example:

          ACE_CATCH ( /* whatever */ )
            {
              // Do something else
              ACE_RETHROW;
            }
          ACE_ENDTRY;
          ACE_CHECK;

          However, if this is not the case, programs may exhibit different
          behavior on platforms with/without native C++ exceptions, as
          shown in the following example:

          ACE_CATCH ( /* whatever */ )